--- a/assets/scss/app.css
+++ b/assets/scss/app.css
@@ -1,7 +1,8 @@
 #dropdown {
   background-color: deeppink; }
 
-body {
+html, body {
+  overflow-x: hidden;
   background-color: #1e7e34; }
 
 /*# sourceMappingURL=app.css.map */
